@@ -1,3 +1,8 @@
+Sat Sep 01 02:40:35 2001  George Lebl <jirka@5z.com>
+
+	* gnome-config.c: kill weird include for strndup, this is in glib
+	  now
+
 Thu Aug 30 19:04:25 2001  George Lebl <jirka@5z.com>
 
 	* gnome-util.c: if looking for a shell in the fallback code,
